--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,10 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --blue600: #2563eb; 
+  --blue800: #1e40af;
+  --blue600: #2563eb;
+  --red500: #ef4444;
+  --red600: #dc2626;
 }
 
 @theme inline {
@@ -18,6 +21,45 @@
     --background: var(--background);
     --foreground: var(--foreground);
   }
+}
+/*text-main*/
+.text-main {
+  color: var(--blue800);
+}
+/*text-hover-blue*/
+.text-hover-blue {
+  transition: color 0.2s ease;
+}
+.text-hover-blue:hover {
+  color: var(--blue800);
+}
+/*button-blue*/
+.button-blue {
+  background-color: var(--blue800);
+  color:#ffffff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.button-blue:hover {
+  background-color: var(--blue600);
+}
+/*button-red*/
+.button-red {
+  background-color: var(--red600);
+  color:#ffffff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.button-red:hover {
+  background-color: var(--red500);
+}
+/* DateInput */
+.date-input::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+}
+/* DateInput Firefox */
+.date-input::-moz-calendar-picker-indicator {
+    cursor: pointer;
 }
 
 /*box-shadow*/
@@ -53,5 +95,5 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
